# python-template

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: python-package.yml
