[metadata]
name = {{ project.name }}
version = {{ project.version }}
description = {{ project.description }}
author = {{ project.author }}
author_email = {{ project.email }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = one, two
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # add required pacakges here

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
dev =
    tox
    flake8
    isort
